<resources>
    <string name="app_name">YOBNH-Phone</string>
    <string name="server_url_hint">Server URL (https://your-bot:8091)</string>
    <string name="token_hint">Phone token</string>
    <string name="save_settings">Save</string>
    <string name="message_hint">Type a message...</string>
    <string name="send_message">Send message</string>
    <string name="send_file">Send file</string>
    <string name="record_voice">Record voice mail</string>
    <string name="stop_voice">Stop &amp; send</string>
    <string name="alerts_title">Bad word alerts</string>
    <string name="listening">Listening for alerts...</string>
    <string name="settings_title">YOBNH-Phone settings</string>
</resources>
